change the base port as it conflicts with other developer tools. Updated the reference to ollama from the deployed image - no need to expose ollama too. udpated references to where the ollama API is used.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,6 @@ services:
     volumes:
       - ollama_models:/root/.ollama
 
-    ports:
-      - "11434:11434"
-
     restart: unless-stopped
 
     entrypoint:
@@ -34,14 +31,14 @@ services:
         wait
 
   locable:
-    image: ghcr.io/pstaykov/locable:latest
+    image: locable:latest
     container_name: locable
 
     environment:
       OLLAMA_HOST: "http://ollama:11434"
 
     ports:
-      - "8000:8000"
+      - "9200:9200"
 
     depends_on:
       - ollama
